// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<a
  href="/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
>
  View topology
</a>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<a
  href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/topology?apiVersion=application.app.k8s.io&cluster=cluster"
>
  testApplicationName
</a>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<a
  href="/multicloud/infrastructure/clusters/details/testClusterName/overview"
>
  testClusterName
</a>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<Link
  to={
    Object {
      "pathname": "/multicloud/home/search/resources",
      "search": "?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName",
      "state": Object {
        "from": "/multicloud/home/search",
        "fromSearch": "",
      },
    }
  }
>
  testPodName
</Link>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<a
  href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
>
  testPolicyName
</a>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<Link
  to={
    Object {
      "pathname": "/multicloud/home/search/resources",
      "search": "?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName",
      "state": Object {
        "from": "/multicloud/home/search",
        "fromSearch": "",
      },
    }
  }
>
  testPolicyName
</Link>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<Link
  to={
    Object {
      "pathname": "/multicloud/home/search/resources",
      "search": "?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName",
      "state": Object {
        "from": "/multicloud/home/search",
        "fromSearch": "",
      },
    }
  }
>
  testApplicationName
</Link>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<a
  href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
>
  testPolicyReport
</a>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<a
  href="http://consoleurl"
  rel="noopener noreferrer"
  target="_blank"
>
  Launch
</a>
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions no timestamp 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions with T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns formatSearchbarSuggestions without T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={Array []}
  labels={
    Array [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<LabelGroup
  aria-label="Label group category"
  categoryName=""
  closeBtnAriaLabel="Close label group"
  collapsedText="3 more"
  defaultIsOpen={false}
  expandedText="Show less"
  hasEditableTextArea={false}
  isClosable={false}
  isCompact={false}
  isEditable={false}
  isVertical={false}
  numLabels={2}
  onClick={[Function]}
  tooltipPosition="top"
>
  <Label
    render={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "padding": "0 .25rem 0 0",
      }
    }
  >
    AUTH_OPERATOR_PROXY_ERROR
  </Label>
  <Label
    render={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "padding": "0 .25rem 0 0",
      }
    }
  >
    CONTAINER_ROOT_PARTITION_SIZE
  </Label>
  <Label
    render={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "padding": "0 .25rem 0 0",
      }
    }
  >
    MASTER_DEFINED_AS_MACHINESETS
  </Label>
  <Label
    render={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "padding": "0 .25rem 0 0",
      }
    }
  >
    NODES_MINIMUM_REQUIREMENTS_NOT_MET
  </Label>
  <Label
    render={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "padding": "0 .25rem 0 0",
      }
    }
  >
    UNSUPPORT_SDN_PLUGIN
  </Label>
</LabelGroup>
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
